--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: 小孔成像
-subtitle: Kong's Brain Observatory
+subtitle: Kong Brain Observatory
 description: 
 author: Xiangzhen Kong
 language: en
