--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 小孔成像
 subtitle: Kong Brain Observatory
-description: 
+description: Kong Brain Observatory
 author: Xiangzhen Kong
 language: en
 timezone:
