--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -33,6 +33,7 @@ swiftype: ## Your swiftype_key, e.g. m7b11ZrsT8Me7gzApciT
 tinysou: ## Your tinysou_key, e.g. 4ac092ad8d749fdc6293
 self_search: false ## Use a jQuery-based local search engine, true/false.
 google_analytics: UA-26255736-1 ## Your Google Analytics tracking id, e.g. UA-42425684-2
+#google_adsense: ca-pub-7680017147908727
 baidu_analytics: ## Your Baidu Analytics tracking id, e.g. 8006843039519956000
 fancybox: true ## If you want to use fancybox please set the value to true.
 show_category_count: false ## If you want to show the count of categories in the sidebar widget please set the value to true.
